--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,24 @@ WPS/GRIBFILE.*
 WPS/Vtable
 WPS/geo_em.*
 WRFV3/Registry/io_boilerplate_temporary.inc
+WRFV3/Registry/Registry
 WRFV3/external/io_int/io_int_idx_tags.h
 WRFV3/external/io_int/test_io_idx
+WRFV3/external/io_grib1/io_grib1.f90
+WRFV3/external/io_grib_share/io_grib_share.f90
+diffwrf
+WRFV3/frame/md_calls.inc
+WRFV3/frame/module_dm.F
+WRFV3/frame/module_state_description.F
+WRFV3/inc/dm_comm_cpp_flags
+WRFV3/inc/wrf_io_flags.h
+WRFV3/inc/wrf_status_codes.h
+WRFV3/run/namelist.input
+WRFV3/run/namelist.input.backup.2018-11-13_09_47_47
+WRFV3/run/namelist.input.backup.2018-11-13_10_05_36
+WRFV3/test/em_real/README.namelist
+WRFV3/test/em_real/p3_lookup_table_1.dat-v2.8.2
+WRFV3/test/em_real/p3_lookup_table_2.dat-v2.8.2
 WRFV3/test/em_real/CAMtr_volume_mixing_ratio*
 WRFV3/test/em_real/CCN_ACTIVATE.BIN
 WRFV3/test/em_real/CLM_*DATA
@@ -40,3 +56,7 @@ WRFV3/test/em_real/wrfinput*
 WRFV3/test/em_real/wrfout*
 WRFV3/tools/fseeko64_test
 WRFV3/tools/fseeko_test
+WRFV3/tools/gen_comms.c
+WRFV3/tools/registry
+compile_job.*
+compile_wps.*
