--- a/build.env
+++ b/build.env
@@ -7,4 +7,5 @@ module load openmpi/2.1.3
 module load ncl/6.4.0
 module load netcdf/4.6.1
 
-
+export JASPERINC=/usr/include
+export JASPERLIB=/usr/lib64
