--- a/build.env
+++ b/build.env
@@ -1,11 +1,11 @@
 module purge
 module load pbs
 module load dot
-module load intel-fc/2018.2.199
-module load intel-cc/2018.2.199
-module load openmpi/2.1.3
-module load ncl/6.4.0
-module load netcdf/4.6.1
+module load intel-compiler/2019.3.199
+module load openmpi/2.1.6
+#module load ncl/6.4.0  # NCL not installed on Gadi yet
+module load hdf5/1.10.5
+module load netcdf/4.7.1
 
 export JASPERINC=/usr/include
 export JASPERLIB=/usr/lib64
