New modules for Gadi

--- a/build.env
+++ b/build.env
@@ -1,11 +1,11 @@
 module purge
 module load pbs
 module load dot
-module load intel-fc/17.0.1.132
-module load intel-cc/17.0.1.132
-module load openmpi/1.10.2
-module load ncl/6.3.0
-module load netcdf/4.3.3.1
+module load intel-compiler/2019.3.199
+module load openmpi/2.1.6
+#module load ncl/6.4.0  # NCL not installed on Gadi yet
+module load hdf5/1.10.5
+module load netcdf/4.7.1
 
 #Uncomment if writing outputs in netcdf4 with compression
 #export NETCDF4=1
