Add GRIB2 for WPS

--- a/build.env
+++ b/build.env
@@ -10,3 +10,7 @@ module load netcdf/4.7.1
 #Uncomment if writing outputs in netcdf4 with compression
 #export NETCDF4=1
 
+# For GRIB2 support
+export JASPERLIB=/usr/lib64
+export JASPERINC=/usr/include
+
