Support for GRIB2 for WPS

--- a/build.env
+++ b/build.env
@@ -7,4 +7,6 @@ module load openmpi/2.1.6
 module load hdf5/1.10.5
 module load netcdf/4.7.1
 
+export JASPERINC=/usr/include
+export JASPERLIB=/usr/lib64
 
