Update to run_compile script and LFS enabled

--- a/build.env
+++ b/build.env
@@ -9,3 +9,6 @@ module load netcdf/4.7.1
 
 export JASPERINC=/usr/include
 export JASPERLIB=/usr/lib64
+
+# Large files support
+export WRFIO_NCD_LARGE_FILE_SUPPORT=1
