Update README.md and .gitignore for V4.4.1

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,37 @@ WRFV3/tools/gen_comms.c
 WRFV3/tools/registry
 compile_job.*
 compile_wps.*
+# Added by Ramzi Kutteh starting with V4.4.1
+WRF/Registry/Registry
+WRF/Registry/io_boilerplate_temporary.inc
+WRF/external/io_grib1/io_grib1.f90
+WRF/external/io_grib_share/io_grib_share.f90
+WRF/external/io_int/io_int_idx_tags.h
+WRF/external/io_int/test_io_idx
+WRF/frame/md_calls.inc
+WRF/frame/module_dm.F
+WRF/frame/module_state_description.F
+WRF/inc/dm_comm_cpp_flags
+WRF/inc/wrf_io_flags.h
+WRF/inc/wrf_status_codes.h
+WRF/phys/module_sf_noahmp_glacier.F
+WRF/phys/module_sf_noahmp_groundwater.F
+WRF/phys/module_sf_noahmpdrv.F
+WRF/phys/module_sf_noahmplsm.F
+WRF/run/MPTABLE.TBL
+WRF/run/namelist.input
+WRF/test/em_real/BROADBAND_CLOUD_GODDARD.bin
+WRF/test/em_real/README.namelist
+WRF/test/em_real/README.physics_files
+WRF/test/em_real/eclipse_besselian_elements.dat
+WRF/test/em_real/ishmael-gamma-tab.bin
+WRF/test/em_real/ishmael-qi-qc.bin
+WRF/test/em_real/ishmael-qi-qr.bin
+WRF/test/em_real/p3_lookupTable_1.dat-3momI_v5.1.7
+WRF/test/em_real/p3_lookupTable_1.dat-5.3-2momI
+WRF/test/em_real/p3_lookupTable_2.dat-2momI_v5.2.3
+WRF/test/em_real/wind-turbine-1.tbl
+WRF/tools/fseeko64_test
+WRF/tools/fseeko_test
+WRF/tools/gen_comms.c
+WRF/tools/registry
